--- a/src/assets/stylesheets/styles.less
+++ b/src/assets/stylesheets/styles.less
@@ -3,3 +3,16 @@
 body {
     background: @themeBackgroundColor;
 }
+
+.container {
+  width: 100%;
+  display: block;
+  .image-wrapper {
+    display: block;
+    margin: 0 10px;
+    &__image {
+      width: auto;
+      height: 100px;
+    }
+  }
+}
