Added support for autoprefixer postcss-loader plugin Install postcss-loader & autoprefixer using npm i -D autoprefixer postcss-loader Add postcss-loader to less rule in webpack.config.js Add postcss.config.js and in the plugins add autoprefixer. Modified the npm start to run webpack first and then webpack-dev-server That is it. Auto prefixer can now work.

--- a/src/assets/stylesheets/styles.less
+++ b/src/assets/stylesheets/styles.less
@@ -6,13 +6,13 @@ body {
 
 .container {
   width: 100%;
-  display: block;
+  display: flex;
   .image-wrapper {
-    display: block;
+    display: inline-block;
     margin: 0 10px;
     &__image {
-      width: auto;
-      height: 100px;
+      width: 200px;
+      height: auto;
     }
   }
 }
