Added styling for single line adddresses

--- a/src/app/pages/AddressSample2/address.less
+++ b/src/app/pages/AddressSample2/address.less
@@ -10,3 +10,9 @@
 .form-inline .form-group .form-control {
   width: 250px;
 }
+
+address {
+  margin: 10px;
+  background-color: #eee;
+  padding: 10px;
+}
